# HSA-Runtime-Conformance

./: CMakeLists.txt  README.md
cmake/: FindCheck.cmake  FindELF.cmake  FindHSA.cmake  agent.cmake  api.cmake  aql.cmake  async.cmake  atomics.cmake  build.cmake  buildlib.cmake  code.cmake  common.cmake  ext_api.cmake  finalization.cmake  image_clear.cmake  image_copy.cmake  image_data.cmake  image_import_export.cmake  init.cmake  kernel.cmake  memory.cmake  queue.cmake  script.cmake  signals.cmake  test.cmake  utils.cmake
script/: execute.sh  run.sh
src/kernels/: agent_dispatch.brig  agent_dispatch.hsail  control_device.brig  control_device.hsail  depend_module1.brig  depend_module1.hsail  depend_module2.brig  depend_module2.hsail  global_agent_vector_copy.brig  global_agent_vector_copy.hsail  global_agent_vector_copy_base_large.brig  global_agent_vector_copy_base_large.hsail  global_vector_copy.brig  global_vector_copy.hsail  global_vector_copy_base_large.brig  global_vector_copy_base_large.hsail  group_memory.brig  group_memory.hsail  init_data.brig  init_data.hsail  kernarg_align.brig  kernarg_align.hsail  kernel_dispatch.brig  kernel_dispatch.hsail  memory_ops.brig  memory_ops.hsail  mixed_scope.brig  mixed_scope.hsail  mixed_scope_base_large.brig  mixed_scope_base_large.hsail  module_scope.brig  module_scope.hsail  module_scope_base_large.brig  module_scope_base_large.hsail  no_op.brig  no_op.hsail  no_op2.brig  no_op2.hsail  no_op_base_large.brig  no_op_base_large.hsail  (+24 more)
src/utils/: agent_utils.c  agent_utils.h  concurrent_utils.c  concurrent_utils.h  (+9 more)
(+311 files in other folders)
